client/src/css/Login.module.scss
@import './constants/colorPalette';
@import './utilities/mixins';

.loginContainer {
	font-family: 'Montserrat', sans-serif;
	background-image: linear-gradient(
		to right, 
		rgba(125, 136, 232, 1), 
		rgba(76, 86, 178, 1)
	);

	max-width: 100vw;
	height: 100vh;

	@media (max-width: 350px) {
		font-size: 11px;
	}

}

.brand {
	margin: 0 auto;
	padding: 2rem;
	cursor: default;

	justify-content: center;

	.brandLogo {
		width: 40px;
		vertical-align: sub;
		margin-right: 1rem;

		@media (max-width: 400px) {
			width: 30px;
			height: 40px;
		}
	}

	.brandText {
		font-family: 'futura_md_btmedium_italic';
		font-size: 2.5rem;
		font-weight: bold;
		font-style: italic;
		letter-spacing: 1px;

		color: white;

		@media (min-width: 1030px) {
			font-size: 3rem;
		}

		@media (max-width: 400px) {
			font-size: 2rem;
		}
	}

	@media (min-width: 1030px) {
		margin-left: 7vw;
		font-size: 2.5rem;
		padding-bottom: 0;

		justify-content: left;
	}
}

.cards {
	justify-content: center;

	@media (min-width: 1030px) {
		justify-content: space-evenly;
		margin-top: 7vh;
	}
}

.featuresCard_Desktop {
	background-color: map-get(map-get($themes, 'default'), 'color-background-table');
	display: block;
	width: 40vw;
	border-radius: 1rem;
	text-align: center;
	
	.featuresCardBody {
		display: flex;
		flex-direction: column;
		justify-content: center;

		height: 60vh;

		.featuresImage {
			height: 100%;
			max-height: 100%;

			width: auto;
			max-width: 100%;
		}
	}
}

.featuresCard_Mobile {
	font-size: 1rem;
	font-weight: bold;
	line-height: 2rem;
	
	width: 80vw;
	height: 35vh;

	background-color: transparent;
	color: map-get(map-get($themes, 'default'), 'color-text');

	.featuresCardBody {
		justify-content: space-evenly;

		li {
			padding: 0.5rem;
		}
	}

	@media (max-width: 400px) {
		width: 90vw;
	}
}

.loginCard {
	font-size: 1.5rem;
	font-weight: bold;
	text-align: center;

	background-color: transparent;
	color: map-get(map-get($themes, 'default'), 'color-text');

	width: 80vw;
	height: 30vh;

	margin: 2rem auto 0 auto;
	border: none;

	.loginCardBody {
		display: flex;
		flex-direction: column;
		justify-content: space-evenly;

		padding: 2rem;
	}

	.tagline {
		font-size: 2rem;

		@media (min-width: 1030px) {
			font-size: 3rem;
			font-weight: bold;

			text-align: center;
			color: map-get(map-get($themes, 'default'), 'color-text');
			
			padding-bottom: 3rem;
		}
	}

	@media (min-width: 1030px) {
		width: 35vw;
		height: 40vh;
		margin: 3rem 0 0 0;
	}
}

/* Google Button */

.googleButtonLink {
	display: inline-block;
	@media (min-width: 1030px) {
		width: 20vw;
		max-width: 250px;
		margin: 0 auto;
	}
}

.googleButton {
	height: auto;
	width: 100%;
	background: map-get(map-get($themes, 'default'), 'color-background-table');
	color: #737373;
	border-radius: 5px;

	@include theme-aware-shadow(1px 1px 9px -1px, 'color-shadow');

	transition-property: background-color, box-shadow;
	transition-duration: 150ms;
	transition-timing-function: ease-in-out;

	&:focus, &:hover {
		@include theme-aware-shadow(1px 1px 9px -1px, 'color-shadow-highlight');

		outline: none;
	}

	&:active {
		background-color: #e5e5e5;
		transition-duration: 10ms;
		border: none;
	}

	@media (max-height: 600px) {
		padding: 0 0 5px 0;
	}

}

.googleButton__icon {
	display: inline-block;
	margin: 0 0 8px 10px;
	width: 18px;
	height: 18px;
	box-sizing: border-box;
}

.googleButton__icon--plus {
	width: 27px;
}

.googleButton__text {
	display: inline-block;
	vertical-align: middle;
	padding: 0 0.5rem;
	font-size: 14px;
	font-weight: bold;
	font-family: 'Roboto', sans-serif;

	@media (min-width: 1030px) {
		padding: 0 1rem;
	}
}

.footer {
	width: 100vw;
	position: absolute;
	bottom: 1.5rem;

	.footerText {
		margin: 0 auto;
	}

	@media (min-width: 1030px) {
		bottom: 10rem;
		font-size: 1.2rem;
	}
}

